--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,9 +18,11 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.9.0 <3.0.0"
 
 dependencies:
+  rflutter_alert: ^1.0.3
+  provider: ^4.3.2+1
   flutter:
     sdk: flutter
 
